--- a/src/main/resources/templates/notice/noticeInfo.html
+++ b/src/main/resources/templates/notice/noticeInfo.html
@@ -7,13 +7,13 @@
     <script type="text/javascript" src="/js/jquery-3.6.0.min.js"></script>
     <script th:inline="javascript">
         // Controller에서 받은 세션에 저장된 값
-        const session_user_id = [[${session.SS_USER_ID}]];
+        const SS_USER_ID = /*[[${session.SS_USER_ID}]]*/ '';
 
         // 공지사항 게시글 작성자 아이디
-        const user_id = [[${rDTO.user_id}]];
+        const user_id = /*[[${rDTO.user_id}]]*/ '';
 
         // 현재 글번호, 자바에서 받을 변수들은 자바스크립트 변수로 저장하면 편함
-        const nSeq = [[${rDTO.notice_seq}]];
+        const nSeq = /*[[${rDTO.notice_seq}]]*/'';
 
         // HTML로딩이 완료되고, 실행됨
         $(document).ready(function () {
@@ -35,10 +35,10 @@
 
         //수정하기
         function doEdit() {
-            if (session_user_id === user_id) {
+            if (SS_USER_ID === user_id) {
                 location.href = "/notice/noticeEditInfo?nSeq=" + nSeq;
 
-            } else if (session_user_id === "") {
+            } else if (SS_USER_ID === "") {
                 alert("로그인 하시길 바랍니다.");
 
             } else {
@@ -49,16 +49,16 @@
 
         //삭제하기
         function doDelete() {
-            if (session_user_id === user_id) {
+            if (SS_USER_ID === user_id) {
                 if (confirm("작성한 글을 삭제하시겠습니까?")) {
                     location.href = "/notice/noticeDelete?nSeq=" + nSeq;
                 }
 
-            } else if (session_user_id === "") {
+            } else if (SS_USER_ID === "") {
                 alert("로그인 하시길 바랍니다.");
 
             } else {
-                alert("본인이 작성한 글만 수정 가능합니다.");
+                alert("본인이 작성한 글만 삭제 가능합니다.");
             }
         }
     </script>
