--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,17 +1,62 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Insert Title</title>
+    <title>✈ SISO TRAVEL ✈</title>
+    <link rel="stylesheet" type="text/css" href="/css/style_main.css" />
 </head>
-<body>
-    <h1>Hello Spring, This is Main Page.</h1>
-    <a href="/a"`>a.html로 이동</a>
-<!--하이퍼 링크 주소 확인
-    a.html 이 아니라 /a
 
-    대소문자 구분하기에 대소문자 확인할것
-    /(슬래시) -> 절대 경로를 표시
-    -->
+
+<script>
+    function LoadBooking() {
+        var iframe = document.getElementById('area');
+        iframe.src = '/siso/booking';
+    }
+
+    function LoadLocal() {
+        var iframe = document.getElementById('area');
+        iframe.src = '/siso/local';
+    }
+
+    function LoadForeign() {
+        var iframe = document.getElementById('area');
+        iframe.src = '/siso/foreign';
+    }
+
+    function LoadPhoto() {
+        var iframe = document.getElementById('area');
+        iframe.src = '/siso/photo';
+    }
+
+    function LoadNoticeList() {
+        var iframe = document.getElementById('area');
+        iframe.src = '/notice/noticeList';
+    }
+</script>
+
+
+<body>
+
+<div class="h">
+    <h1 style="background-image: url('/images/h1_main.jpg');">
+        <a href="/main"><img src="/images/logo.png" id="logo"></a>
+        <a href="/main">SISO TRAVEL</a></h1>
+</div>
+
+<a href="/siso/index"><span>Logout</span></a>
+
+<nav>
+    <ul>
+        <li><a href="/siso/booking" onclick="LoadBooking()" title="예약하기" target="frame">Booking</a></li>
+        <li><a href="/siso/local" onclick="LoadLocal()" title="국내여행" target="frame">Local</a></li>
+        <li><a href="/siso/foreign" onclick="LoadForeign()" title="해외여행" target="frame">Foreign</a></li>
+        <li><a href="/siso/photo" onclick="LoadPhoto()" title="사진앨범" target="frame">Review</a></li>
+        <li><a href="/notice/noticeList" onclick="LoadNoticeList()" title="게시판" target="frame">Notice</a></li>
+    </ul>
+</nav>
+
+<iframe id="area" name="frame" src="/images/iframe_main.jpg"></iframe>
+
 </body>
 </html>
