--- a/src/main/resources/templates/redirect.html
+++ b/src/main/resources/templates/redirect.html
@@ -5,14 +5,13 @@
   <title>redirect</title>
 </head>
 <body>
-
-<h1>redirect</h1>
-<script th:inline="javascript">
-  window.onload = function () {
+<script th:inline="javascript"> // 자바스크립트 내부에서 Thymeleaf 문법을 인식할수 있도록 함
+// 자바로부터 넘어온 값을 Thymeleaf 문법으로 꺼내어 자바스크립트 변수에 할당함
+  window.onload = function (){
     let msg = [[${msg}]];
     let url = [[${url}]];
     alert(msg);
-    location.href = url;
+    location.href=url;
   }
 </script>
 <meta charset="UTF-8">
