--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -84,7 +84,7 @@
 
             // 회원가입
             $("#btnUserReg").on("click", function () { // 버튼 클릭했을때, 발생되는 이벤트 생성함(onclick 이벤트와 동일함)
-                location.href = "/siso/join"; // "/user/userRegForm"; 기존꺼 주석처리
+                location.href = "user/join";
             })
 
             // 아이디 찾기
