--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -44,7 +44,7 @@
         <a href="/main">SISO TRAVEL</a></h1>
 </div>
 
-<a href="/siso/index"><span>Logout</span></a>
+<a href="/index"><span>Logout</span></a>
 
 <nav>
     <ul>
