--- a/src/main/resources/templates/notice/noticeEditInfo.html
+++ b/src/main/resources/templates/notice/noticeEditInfo.html
@@ -13,6 +13,11 @@
             $("#btnSend").on("click", function () {
                 doSubmit(); // 공지사항 수정하기 실행
             })
+
+            // 버튼 클릭했을때, 발생되는 이벤트 생성함(onclick 이벤트와 동일함)
+            $("#btnList").on("click", function () {
+                location.href = "/notice/noticeList"; // 공지사항 리스트 이동
+            })
         })
 
         //글자 길이 바이트 단위로 체크하기(바이트값 전달)
@@ -86,6 +91,7 @@
                 <div class="divTableCell">
                     <input type="text" name="title" maxlength="100"
                            style="width: 95%"/>[[${rDTO.title}]]
+                    <!-- 텍스트창 안에 기존 title 이 남아있게 수정봐야함 -->
                 </div>
             </div>
             <div class="divTableRow">
@@ -99,12 +105,12 @@
                               value="N" th:checked="${rDTO.notice_yn == 'N'}"/>
                 </div>
             </div>
-            <div class="divTableRow">
+<!--            <div class="divTableRow">
                 <div class="divTableCell">조회수
                 </div>
                 <div class="divTableCell">[[${rDTO.read_cnt}]]
                 </div>
-            </div>
+            </div>-->
             <div class="divTableRow">
                 <div class="divTableCell">내용
                 </div>
@@ -118,6 +124,7 @@
     <div>
         <button id="btnSend" type="submit">수정</button>
         <button type="reset">다시 작성</button>
+        <button id="btnList" type="button">목록으로</button>
     </div>
 </form>
 </body>
